<resources>
    <string name="app_name">BodyGoals</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_overview">Overview</string>
    <string name="title_weekly_log">Weekly Log</string>
    <string name="title_add_goal">Add Goal</string>
    <string name="title_add_session">Add Session</string>
    <string name="title_run_session">Run Session</string>
    <string name="title_yearly_summary">Yearly Summary</string>
    <string name="title_coverage">Coverage</string>
    <!-- Labels -->
    <string name="overall">Overall</string>
    <string name="percent_placeholder">[Percent]</string>
    <string name="percent">%1$d%%</string>
    <string name="year_placeholder">[Year]</string>
    <string name="goals">Goals</string>
    <string name="calendar_week_place_holder">CW %1$d</string>
    <string name="calendar_week_year_place_holder">(%1$d)</string>
    <string name="goal_frequency">Frequency</string>
    <string name="session_progress_percent_placeholder">0%</string>
    <string name="session_progress_placeholder">0</string>
    <string name="start_week">Start Week</string>
    <string name="muscle_groups">Muscle groups</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="plus_text_icon">+</string>
    <string name="slash_text_icon">/</string>
    <string name="add">Add</string>
    <string name="what_goals">What?</string>
    <string name="when_done">When?</string>
    <string name="weekly_log_entry">[%1$s] %2$s</string>
    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mar</string>
    <string name="april_short">Apr</string>
    <string name="may_short">May</string>
    <string name="june_short">Jun</string>
    <string name="july_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Oct</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dec</string>
    <string name="selected_year_placeholder">[Year]</string>
    <!--  New Exercise  -->
    <string name="title_new_exercise">New Exercise</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_add_exercise_progress">Add Exercise Progress</string>
    <string name="new_exercise_type">Exercise</string>
    <string name="new_exercise_variant">Variant</string>
    <string name="new_exercise_muscles">Muscles</string>
    <string name="rep_goal">Rep Goal</string>
    <string name="max_effort">Max. Effort</string>
    <string name="exercise_id">Exercise</string>
    <string name="new_exercise_unit">Unit</string>
    <string name="new_exercise_rep_goal">Rep Goal</string>
    <string name="new_exercise_kg_goal">KG Goal</string>
    <string name="exercises_new_exercise">New Exercise</string>
    <string name="toast_new_exercise_no_variant">Variant name missing</string>
    <string name="toast_new_exercise_no_rep_goal">Rep goal missing</string>
    <string name="toast_add_exercise_progress_no_max_effort">Variant name missing</string>
    <!-- Buttons -->
    <string name="previous_week">&lt;</string>
    <string name="next_week">&gt;</string>
    <string name="button_weekly_log">Weekly Log</string>
    <string name="button_to_coverage">Coverage</string>
    <string name="button_to_yearly_summary">Yearly</string>
    <string name="button_goals_list">Goals</string>
    <string name="button_add_session">Add Session</string>
    <string name="button_overview">Overview</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_back">Back</string>
    <string name="datetime_placeholder">[datetime]</string>
    <!-- ComboBoxes -->
    <string name="cb_shoulders">Shoulders</string>
    <string name="cb_neck">Neck</string>
    <string name="cb_triceps">Triceps</string>
    <string name="cb_biceps">Biceps</string>
    <string name="cb_lats">Lats</string>
    <string name="cb_lower_back">Lower Back</string>
    <string name="cb_chest">Chest</string>
    <string name="cb_abs">Abs</string>
    <string name="cb_quads">Quads</string>
    <string name="cb_harm_strings">Harm Strings</string>
    <string name="cb_calves">Calves</string>
    <string name="cb_forearms">Forearms</string>
    <!-- image content descriptions -->
    <string name="button_disable_delete_description">Button to disable or delete goal.</string>
    <string name="button_head">Head of the mannequin showing coverage</string>
    <string name="button_chest">Chest of the mannequin showing coverage</string>
    <string name="button_core">Core of the mannequin showing coverage</string>
    <string name="button_shoulder_left">Left shoulder of the mannequin showing coverage</string>
    <string name="button_arm_left">Left arm of the mannequin showing coverage</string>
    <string name="button_forearm_left">Left forearm of the mannequin showing coverage</string>
    <string name="button_shoulder_right">Right shoulder of the mannequin showing coverage</string>
    <string name="button_arm_right">Right arm of the mannequin showing coverage</string>
    <string name="button_forearm_right">Right forearm of the mannequin showing coverage</string>
    <string name="button_leg_left">Left leg of the mannequin showing coverage</string>
    <string name="button_calf_left">Left calf of the mannequin showing coverage</string>
    <string name="button_leg_right">Right leg of the mannequin showing coverage</string>
    <string name="button_calf_right">Right calf of the mannequin showing coverage</string>
    <!-- Hints -->
    <string name="hint_max_sets">Type here your set number goal</string>
    <!-- Toasts -->
    <string name="toast_no_frequency">No frequency was given</string>
    <string name="toast_no_goal_name">No goal name was given</string>
    <string name="toast_no_muscle_groups">No muscle groups were selected</string>
    <string name="goal_already_exists">A goal with this name already exists</string>
</resources>