<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_previous_week"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/previous_week" />

    <View
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/calendar_week_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_week_place_holder" />

        <TextView
            android:id="@+id/calendar_week_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_week_year_place_holder"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/button_next_week"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:text="@string/next_week" />

</LinearLayout>