<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.exercises.AddExerciseProgress">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/exercise_id"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/max_effort"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/rep_goal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="96dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout8"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/exercise_id_spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/new_exercise_type"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/max_effort_value"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:hint="@string/max_effort"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rep_goal_value"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/rep_goal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_cancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>